<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="start"
    tools:context=".SurveyActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/survey_page_title"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_event"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/dance_event_text" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/play_event_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="18dp">
            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_event_text" />
            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_event_text" />
        </LinearLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_event_text" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/fashion_event_text" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton

        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="150dp"
        android:layout_height="64sp"
        android:layout_gravity="end"
        android:enabled="true"
        android:text="@string/submit_btn_text"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        app:icon="@drawable/baseline_done_24"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:iconGravity="end"
        app:iconPadding="8sp"
        />
</LinearLayout>